style: Redesign header, fix layout bugs, and add colored logo

--- a/css/basics/base.css
+++ b/css/basics/base.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    margin: 0;
+    font-family: 'Montserrat', sans-serif
 }
 
 body,
