--- a/css/setup/typography.css
+++ b/css/setup/typography.css
@@ -17,3 +17,8 @@
     font-family: 'Anton';
     src: url('../../fonts/Anton-Regular.ttf') format('truetype');
 }
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('../../fonts/Montserrat-Regular.ttf') format('truetype');
+}
